--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,14 +1,35 @@
-1.1.6
+Changelog
+
+2.0.0
+	Adoption by Linuxgurugamer
+
+	Thanks to GitHub user @RafaelDominiquini for these changes
+		Size0ISRU tempCurve changed, ISRU will no longer overheat
+		Fixes deployable wheels 
+		Fixes Asteroid klaw and Radial Klaw textures
+		Miniklaw moved to legacy due to stock miniklaw; non 1.10 installs can find it by removing the TechHidden = True line from the /MiningExpansion/parts/size0klaw/part.cfg
+		Improves Atmospheric Condenser Xenon harvest rates
+
+
+	Thanks to GitHub user @yalov for this
+		SMX_Size3ISRU req. cooling is set to 500, equal to the specified MaxCoolant
+
+	Added support for PatchManager, which now includes the optional patches which were in the Extras folder in the original zip file
+	Removed ModuleManager.dll from the release
+
+
+1.1.6 - Rafael Dominiquini
 =============================================
 -Size0ISRU tempCurve changed, ISRU will no longer overheat
 -Fixes deployable wheels 
 
-1.1.5
+1.1.5 - Rafael Dominiquini
 ==============================================
 KSP 1.10 update
 -Fixes Asteroid klaw and Radial Klaw textures
 -Miniklaw moved to legacy due to stock miniklaw; non 1.10 installs can find it by removing the TechHidden = True line from the /MiningExpansion/parts/size0klaw/part.cfg
 -Improves Atmospheric Condenser Xenon harvest rates
+
 1.1
 ===========================================
 KSP 1.9.x update
